# Qix

./: .gitignore  CMakeLists.txt  README.md
cli-lib/: qix_game_executavel
cli-lib/include/: screen.h
cli-lib/src/: cli-lib-example  main.c
